--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
 <head>
     <link rel="stylesheet" href="css/me.css" type="text/css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
 </head>
 <body class="textback">
 <pre>
@@ -2535,6 +2536,7 @@ the matter with Captain Matsuo.
 Take your garage pass and access the garage in the southwest area of the 
 port.  You won't get far however, as a group of geth led by a pair of 
 destroyers ambush you before you can reach the Mako.  You can make this fight 
+
 easier by decrypting the lock on the nearby crawler and turning its guns 
 against the geth.  Once the fight is over, Matsuo shows up to investigate the 
 commotion.  The geth were clearly smuggled though security in the cargo 
