Added icon meta tags

--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <head>
     <link rel="stylesheet" href="css/me.css" type="text/css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
+    <link rel="apple-touch-icon" href="images/icons/me1_ico.png"/>
+    <link rel="apple-touch-icon-precomposed" href="images/icons/me1_ico.png"/>
 </head>
 <body class="textback">
 <pre>
@@ -652,6 +654,7 @@ biotic powers, but lacks weapon or armor talents.
                        medical training."
 
                        Starting Talents:   Barrier
+
                                            Decryption
                                            First Aid
                                            Throw
@@ -1296,6 +1299,7 @@ Anderson's candidacy.
 ++++++++++++++++++++
 Pressly
 
+
 Navigator Pressly is a bridge officer on the Normandy, serving as the ship's 
 navigator.  Pressly made a name for himself during the battle for Elysium 
 when his ship helped drive off the batarian invaders.  He subsequently 
@@ -1483,6 +1487,7 @@ fill you in on the Normandy's unique stealth systems, which allow it to avoid
 detection by other ships.
 
 3 - Jenkins and Chakwas (Optional)
+
 Outside of the briefing room, Corporal Jenkins is having a conversation with 
 Dr. Chakwas.  You can speak with them to learn more about the Spectres, as 
 well as Eden Prime--your destination for this mission.
