Citadel Map Keepers

--- a/index.html
+++ b/index.html
@@ -1122,6 +1122,7 @@ obstacle, leaving the turret free to return fire.
 <a id="14char">Characters                                                            </a>
 ===========
 
+
 <a id="14acom">COMMANDER SHEPARD                                                     </a>
 -----------------
 
@@ -3633,6 +3634,7 @@ Secret" assignment.
             In the traffic control room
         1 in the Docking Bay
             At the far end of the platform
+            <a href="images/me1/citadel_map.png"><div id="imgbox"><img src="images/me1/citadel_map.png" /></div></a>
 ++++++++++++++++++++
 
 
@@ -4059,6 +4061,7 @@ first in each scenario.
     Time Trial  -  Warehouse      -  1:24.67 (to kill 20 hostiles)
     Time Trial  -  Tropical       -  1:20.94 (to kill 25 hostiles)
     Time Trial  -  Volcanic       -  1:54.61 (to kill 20 hostiles)
+
 
     Capture     -  Volcanic       -  2:00.53 (to capture 3 objectives)
     Capture     -  Tropical       -  1:58.67 (to capture 4 objectives)
